crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_comment_between_clauses.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person)\\n// filter active users\\nWHERE n.active = true\\nRETURN n\")"
---
MATCH (n:Person)
// filter active users
WHERE n.active = TRUE
RETURN n
