crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_comment_inline_with_return_item.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n.name, /* the age */ n.age\")"
---
MATCH (n)
RETURN n.name, /* the age */ n.age
