crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_corpus_keyword_lower_pipeline.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"MATCH (n:Person) WHERE n.age > 30 WITH n RETURN n.name\",\n&opts).unwrap()"
---
match (n:Person)
where n.age > 30
with n
return n.name
