crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_corpus_keyword_lower_write_clause.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"CREATE (n:Person {name: 'Alice'}) RETURN n\", &opts).unwrap()"
---
create (n:Person {name: 'Alice'})
return n
