crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_corpus_keyword_preserve_pipeline.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"match (n:Person) where n.age > 30 With n Return n.name\",\n&opts).unwrap()"
---
match (n:Person)
where n.age > 30
With n
Return n.name
