crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_corpus_trailing_commas_never_multi_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"MATCH (n:Person) RETURN n.name, n.age, n.email\", &opts).unwrap()"
---
MATCH (n:Person)
RETURN n.name, n.age, n.email
