crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_create_relationship.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Person), (b:Person) WHERE a.name = 'Alice' AND b.name = 'Bob' CREATE (a)-[:KNOWS]->(b)\")"
---
MATCH (a:Person), (b:Person)
WHERE a.name = 'Alice' AND b.name = 'Bob'
CREATE (a)-[:KNOWS]->(b)
