crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_delete_node.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Temp'}) DELETE n\")"
---
MATCH (n:Person {name: 'Temp'})
DELETE n
