crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_detach_delete.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Temp'}) DETACH DELETE n\")"
---
MATCH (n:Person {name: 'Temp'})
DETACH
DELETE n
