crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_double_match_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Person) MATCH (b:Person) WHERE a.name <> b.name RETURN a, b\")"
---
MATCH (a:Person)
MATCH (b:Person)
WHERE a.name <> b.name
RETURN a, b
